crates/strz-format/tests/snapshots/fixtures__formatted_document@comments__block_comment_structure_ok.snap
---
source: crates/strz-format/tests/fixtures.rs
expression: formatted
---
workspace {
    model {
        /*
          This block comment keeps its relative indentation.
            The second line is intentionally more indented.
        */
        #	A hash comment that starts with a tab after the marker should still be treated as a comment.
        system = softwareSystem "System"
    }
}
